--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,14 +1,25 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    if (System.getenv().containsKey("IS_CI_JOB")) {
+        compileSdkVersion Integer.parseInt(System.getenv("CI_ANDROID_BUILD_SDK_VERSION"))
+        buildToolsVersion System.getenv("CI_ANDROID_BUILD_TOOLS_VERSION")
+    } else {
+        compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+        buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+    }
     publishNonDefault true
 
     defaultConfig {
+        if (System.getenv().containsKey("IS_CI_JOB")) {
+            minSdkVersion Integer.parseInt(System.getenv("CI_ANDROID_BUILD_MIN_SDK_VERSION"))
+            targetSdkVersion Integer.parseInt(System.getenv("CI_ANDROID_BUILD_TARGET_SDK_VERSION"))
+        } else {
+            minSdkVersion Integer.parseInt(project.ANDROID_BUILD_MIN_SDK_VERSION)
+            targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
+        }
+
         applicationId "com.joaquimley.avenging"
-        minSdkVersion 17
-        targetSdkVersion 24
         versionCode 3
         versionName "1.0"
     }
