Convert PresenterView to contracts, removed retrofit from presenter, small changes in wear (Bootstrap characterActivity)

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,6 +31,23 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+    }
+
+    project.ext {
+        compileSdkVersion = 24
+        buildToolsVersion = '24.0.2'
+
+        junitVersion = '4.12'
+        mockitoVersion = '1.10.19'
+        espressoVersion = '2.2.1'
+
+        supportLibraryVersion = '24.2.1'
+        playServicesVersion = '9.4.0'
+        leakCanaryVersion = '1.3.1'
+
+        retrofitVersion = '2.1.0'
+        okhttpLoggerVsion = '3.3.0'
+        picassoVersion = '2.5.2'
     }
 }
 
