--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,11 @@ android:
       # Specify at least one system image, if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-24
 
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+    
 notifications:
   email: false
 
