Fix #9, MVP improvements (#10)
* Downsample the image sizes, readme update, compile and min sdk to config file

* Add the missing vars to README and CI enviroment.

* Test with travis envt vars

* Changed build.config mobile for sdk versions

* System envt

* Add copyright notice

* Fix on Issue #1, #2, removed unsued code to improve code quality

* Downsample the image sizes, readme update, compile and min sdk to config file

* Add copyright notice

* Fix on Issue #1, #2, removed unsued code to improve code quality

* Fix on memory leak due to Presenters reference

* Convert PresenterView to contracts, removed retrofit from presenter, small changes in wear (Bootstrap characterActivity)

* Add License file to project, update readme to new configs, update travis yml to accept licenses

* Clarify on README, removed unecessary publishNonDefault on wear and mobile modules, version bump, commented code on characterActivity (wear module)

* update travis to be under android

* Travis update

* update build tools version

* Removed wrong contributing.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ android:
     - platform-tools
     - tools
     # The BuildTools version used by your project
-    - build-tools-24.0.0
+    - build-tools-24.0.2
     - android-24
     - extra-android-m2repository
     - extra-google-m2repository
@@ -20,6 +20,11 @@ android:
       # Specify at least one system image, if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-24
 
+  licenses:
+      - android-sdk-preview-license-.+
+      - android-sdk-license-.+
+      - google-gdk-license-.+
+    
 notifications:
   email: false
 
