--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
-    publishNonDefault true
+    compileSdkVersion project.compileSdkVersion
+    buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
         applicationId "com.joaquimley.avenging"
         minSdkVersion 19
         targetSdkVersion 24
-        versionCode 2
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.1"
     }
 
     buildTypes {
@@ -22,12 +21,13 @@ android {
 }
 
 dependencies {
-    final PICASSO_VERSION = '2.5.2'
-    final PLAY_SERVICES_WEARABLE_VERSION = '9.4.0'
+    debugCompile project(path: ':core', configuration: 'debug')
+    releaseCompile project(path: ':core', configuration: 'release')
+
+    final PLAY_SERVICES_WEARABLE_VERSION = '9.6.0'
     final SUPPORT_WEARABLE_VERSION = '2.0.0-alpha1'
 
-    compile project(':core')
-    compile "com.squareup.picasso:picasso:$PICASSO_VERSION"
+    compile "com.squareup.picasso:picasso:$picassoVersion"
     compile "com.google.android.support:wearable:$SUPPORT_WEARABLE_VERSION"
     compile "com.google.android.gms:play-services-wearable:$PLAY_SERVICES_WEARABLE_VERSION"
 }
