Add initial list requested test

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     // Unit tests dependencies
     testCompile "junit:junit:$junitVersion"
     testCompile "org.mockito:mockito-core:$mockitoVersion"
+    testCompile "org.powermock:powermock-module-junit4:$powermockVersion"
+    testCompile "org.powermock:powermock-api-mockito:$powermockVersion"
 }
