--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -39,6 +39,7 @@ allprojects {
 
         junitVersion = '4.12'
         mockitoVersion = '1.10.19'
+        powermockVersion = '1.6.4'
         espressoVersion = '2.2.1'
 
         supportLibraryVersion = '24.2.1'
