Update travis file to run tests, update license duplication ignore, update Wear play services version, refactor to new ListPresenter on wear

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,4 +57,5 @@ script:
   #- ./gradlew core:unitTests
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
-  - ./gradlew mobile:build # as an example
+  - ./gradlew core:check
+  #- ./gradlew mobile:build # as an example
