--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 24
         versionCode 5
         versionName "1.0.2"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     lintOptions {
@@ -18,16 +20,19 @@ android {
     }
 
     buildTypes {
+
         debug {
             minifyEnabled false
             applicationIdSuffix '.debug'
             versionNameSuffix '-DEBUG'
         }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
@@ -41,8 +46,11 @@ dependencies {
     releaseCompile project(path: ':core', configuration: 'release')
     compile "com.android.support:design:$supportLibraryVersion"
     compile "com.squareup.picasso:picasso:$picassoVersion"
-    // Functional tests dependencies
-//    androidTestCompile ("com.android.support.test.espresso:espresso-core:$espressoVersion") {
-//        transitive = false;
-//    }
+    // Instrumentation tests dependencies
+    androidTestCompile("com.android.support.test:runner:$testRunnerVersion") {
+        exclude module: 'support-annotations'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoVersion") {
+        exclude module: 'support-annotations'
+    }
 }
