--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
     }
 }
 
