--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'jacoco-android'
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -29,6 +30,7 @@ android {
 
         debug {
             minifyEnabled false
+            testCoverageEnabled true
         }
 
         release {
