Joaquim ley development (#3)
* Add unit tests covering most ListPresenter (#11)

* Add initial list requested test

* Add tests covering the entire ListPresenter

* Prep for blog - 1 (#12)

* Update travis file to run tests, update license duplication ignore, update Wear play services version, refactor to new ListPresenter on wear

* CI travis with unit tests (#13)

* fix abortOnError

* Update travis with commented (to be done) unit tests), README article update

* update readme, small changes (reflecting blog post)

* Remove deprecated files (#14)

* fix abortOnError

* Update travis with commented (to be done) unit tests), README article update

* update readme, small changes (reflecting blog post)

* removed unused files

* Update README.MD

- Add blog post link

* Update README (#15)

- Remove license badge (added file and it still awesome on top-right);
- Avenging was added to AndroidArsenal 😎 so added this badge instead;

* Presenter check if View is not null before delivering results

Fix crashes if View is null when service callback methods called (#16)

* Update LeakCanary version (#17)

- Version 1.5

* ListPresenter and CharacterPresenter unit tests (#18)

- Bump leakCanary to 1.5
- ListPresenter missing unit tests
- CharacterPresenter unit tests
- CharacterPresenter hideProgress() on missing callbacks
- Refactor CharacterPresenter tests
- Wear to implement the new CharacterPresenter constructor

* Remaining Unit tests (#20)

* Unit tests, Add license exclude to remote build.gradle

* 100% Method and Lines coverage for both presenters

* Add unit test task to CI

* VC bump, Wear play services version bump

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,9 +21,10 @@ android {
         }
     }
 
-    // ref https://github.com/square/okio/issues/58
     lintOptions {
+        // ref https://github.com/square/okio/issues/58
         warning 'InvalidPackage'
+        abortOnError false
     }
 
     buildTypes {
@@ -37,6 +38,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
     }
 }
 
