--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -25,6 +25,7 @@ android {
             minifyEnabled false
             applicationIdSuffix '.debug'
             versionNameSuffix '-DEBUG'
+            testCoverageEnabled true
         }
 
         release {
