--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
   # Jdk version used by your project
   - oraclejdk8
 
-sudo: false # faster builds
+sudo: false
 
 android:
   components:
@@ -44,30 +44,20 @@ install:
   - true
 
 before_script:
-    - chmod +x gradlew
-    - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
-
-# Build, and run tests
-script:
-  - ./gradlew build jacocoTestReport assembleAndroidTest
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - chmod +x gradlew
+  - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
   - android-wait-for-emulator
-  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-  - ./gradlew connectedCheck
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - adb shell input keyevent 82 &
 
 #Build, and run tests
-#script: 
+script: 
   # Once tests written should run the gradle task for both Mobile and Wear
   # currently only doing a normal build to test Travis config
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
-#  -  ./gradlew core:test --info
+  - ./gradlew core:test --info
+  - ./gradlew core:jacocoTestReport 
 
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
