--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,6 +30,7 @@ android {
 
         debug {
             minifyEnabled false
+            testCoverageEnabled true
         }
 
         release {
