Up library and compile versions, small ListActivityTest bootstrap, BASE_URL

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         minSdkVersion 11
-        targetSdkVersion 24
+        targetSdkVersion 25
 
         if (System.getenv().containsKey("IS_CI_JOB")) {
             buildConfigField("String", "PUBLIC_KEY", "\"" + System.getenv("CI_PUBLIC_KEY") + "\"")
@@ -29,7 +29,8 @@ android {
 
         debug {
             minifyEnabled false
-            testCoverageEnabled true
+            // Enable for ui-testing: http://stackoverflow.com/questions/39195754/java-lang-noclassdeffounderror-failed-resolution-of-lorg-jacoco-agent-rt-inter
+//            testCoverageEnabled true
         }
 
         release {
