--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.joaquimley.avenging"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 4
         versionName "1.0.2"
     }
@@ -18,6 +18,7 @@ android {
             minifyEnabled false
             applicationIdSuffix '.debug'
             versionNameSuffix '-DEBUG'
+            // Enable for ui-testing: http://stackoverflow.com/questions/39195754/java-lang-noclassdeffounderror-failed-resolution-of-lorg-jacoco-agent-rt-inter
             testCoverageEnabled true
         }
 
