--- a/build.gradle
+++ b/build.gradle
@@ -32,15 +32,16 @@ allprojects {
     }
 
     project.ext {
-        compileSdkVersion = 24
-        buildToolsVersion = '24.0.2'
+        compileSdkVersion = 25
+        buildToolsVersion = '25.0.0'
 
         junitVersion = '4.12'
         mockitoVersion = '1.10.19'
         powermockVersion = '1.6.4'
-        espressoVersion = '2.2.1'
+        espressoVersion = '2.2.2'
+        testRunnerVersion = '0.5'
 
-        supportLibraryVersion = '24.2.1'
+        supportLibraryVersion = '25.0.1'
         playServicesVersion = '9.4.0'
         leakCanaryVersion = '1.5'
 
