--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ android:
     - extra-android-support
     - extra-google-google_play_services
       # Specify at least one system image, if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-25
+    #- sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-addon-google_apis-google-25
 
   licenses:
       - android-sdk-preview-license-.+
