--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,13 @@ android:
     - tools
     # The BuildTools version used by your project
     - build-tools-25.0.1
-    - android-25
+    - android-24
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-android-support
     - extra-google-google_play_services
       # Specify at least one system image, if you need to run emulator(s) during your tests
-   # - sys-img-armeabi-v7a-android-25
-    - sys-img-armeabi-v7a-addon-google_apis-google-25
+    - sys-img-armeabi-v7a-android-24
 
   licenses:
       - android-sdk-preview-license-.+
@@ -45,11 +44,11 @@ install:
   - true
 
 before_script:
-  - chmod +x gradlew
-  - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a-addon-google_apis-google-25
-  - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+    - chmod +x gradlew
+    - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 # Build, and run tests
 script: 
