--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ android:
     - extra-android-support
     - extra-google-google_play_services
       # Specify at least one system image, if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-24
+    - sys-img-armeabi-v7a-android-25
 
   licenses:
       - android-sdk-preview-license-.+
@@ -45,7 +45,7 @@ install:
 
 before_script:
     - chmod +x gradlew
-    - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
+    - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
@@ -56,7 +56,7 @@ script:
   # currently only doing a normal build to test Travis config
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
-  # -  ./gradlew core:test --info
+  -  ./gradlew core:test --info
   - ./gradlew core:jacocoTestReport
 
 # Codecov
