--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ script:
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
   -  ./gradlew core:test --info
-  - ./gradlew core:jacocoTestReport
+  #- ./gradlew core:jacocoTestReport
 
 # Codecov
 after_success:
