--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ script:
   # currently only doing a normal build to test Travis config
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
-  - ./gradlew core:test --info
+  - ./gradlew core:test --stacktrace
   - ./gradlew core:jacocoTestReport
 
 # Codecov
