--- a/.travis.yml
+++ b/.travis.yml
@@ -39,14 +39,17 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
+before_install:
+  - chmod +x gradlew
+
 install:
   # Check install section: http://docs.travis-ci.com/user/build-configuration/#install
   # If you'd like to skip the install stage entirely, set it to true and nothing will be run.
   - true
 
 before_script:
-    - chmod +x gradlew
-    - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
+    #- chmod +x gradlew
+    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
