--- a/.travis.yml
+++ b/.travis.yml
@@ -2,68 +2,54 @@ language: android
 
 jdk:
   # Jdk version used by your project
+  # Prevent java.lang.UnsupportedClassVersionError: com/android/build/gradle/AppPlugin : Unsupported major.minor version 52.0
   - oraclejdk8
-
-sudo: false
 
 android:
   components:
+
+    # Use the latest revision of Android SDK Tools
     - platform-tools
     - tools
+
     # The BuildTools version used by your project
     - build-tools-24.0.3
+
+    # The SDK version used to compile your project
     - android-25
+
+    # Additional components
     - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-android-support
-    - extra-google-google_play_services
-      # Specify at least one system image, if you need to run emulator(s) during your tests
+
+    # Specify system images to run emulators during the tests
+    - sys-img-armeabi-v7a-android-15
     - sys-img-armeabi-v7a-android-25
+    - sys-img-x86-android-15
     - sys-img-x86-android-25
 
-  licenses:
-      - android-sdk-preview-license-.+
-      - android-sdk-license-.+
-      - google-gdk-license-.+
-    
-notifications:
-  email: false
-
+# Caching in Gradle means that to avoid uploading the cache after every build
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-
-# cache between builds
 cache:
   directories:
-  - $HOME/.m2
-  - $HOME/.gradle/caches/
-  - $HOME/.gradle/wrapper/
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 
+# Prevent ./gradlew: Permission denied
 before_install:
   - chmod +x gradlew
 
-install:
-  # Check install section: http://docs.travis-ci.com/user/build-configuration/#install
-  # If you'd like to skip the install stage entirely, set it to true and nothing will be run.
-  - true
-
+# Emulator Management: Create, Start and Wait
 before_script:
-    #- chmod +x gradlew
-    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
-# Build, and run tests
-script: 
-  # Once tests written should run the gradle task for both Mobile and Wear
-  # currently only doing a normal build to test Travis config
-  #- ./gradlew mobile:functionalTests
-  #- ./gradlew wear:functionalTests
-  #- ./gradlew build core:connectedCheck
-  - ./gradlew core:test --stacktrace
-  #- ./gradlew core:jacocoTestReport --stacktrace
+#Build, and run tests
+script:
+  - ./gradlew jacocoTestReport
 
-# Codecov
+#Codecov
 after_success:
   - bash <(curl -s https://codecov.io/bash)
