--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,15 @@ android:
     - platform-tools
     - tools
     # The BuildTools version used by your project
-    - build-tools-24.0.3
+    - build-tools-25.0.1
     - android-25
     - extra-android-m2repository
     - extra-google-m2repository
-    - extra-android-support
-    - extra-google-google_play_services
       # Specify at least one system image, if you need to run emulator(s) during your tests
+    - sys-img-armeabi-v7a-android-11
+    - sys-img-x86-android-11
     - sys-img-armeabi-v7a-android-25
-    - sys-img-armeabi-v7a-android-24
     - sys-img-x86-android-25
-    - sys-img-x86-android-24
 
   licenses:
       - android-sdk-preview-license-.+
@@ -41,17 +39,14 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
-before_install:
-  - chmod +x gradlew
-
 install:
   # Check install section: http://docs.travis-ci.com/user/build-configuration/#install
   # If you'd like to skip the install stage entirely, set it to true and nothing will be run.
   - true
 
 before_script:
-    #- chmod +x gradlew
-    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+    - chmod +x gradlew
+    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
@@ -63,8 +58,8 @@ script:
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
   #- ./gradlew build core:connectedCheck
-  - ./gradlew core:test --stacktrace
-  #- ./gradlew core:jacocoTestReport --stacktrace
+  #- ./gradlew core:test --stacktrace
+  - ./gradlew core:jacocoTestReport
 
 # Codecov
 after_success:
