--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ android:
       # Specify at least one system image, if you need to run emulator(s) during your tests
     #- sys-img-armeabi-v7a-android-11
     #- sys-img-x86-android-
-    - sys-img-armeabi-v7a-android-25
+    #- sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-google_apis-23
     - sys-img-x86-android-25
 
   licenses:
