--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ jdk:
   - oraclejdk8
 
 sudo: false
+cache: false # Remove cache
 
 android:
   components:
     - tools
     - platform-tools
-   # - tools # Repeated on purpose
-    
     # The BuildTools version used by your project
     - build-tools-25.0.0
     - android-25
@@ -19,8 +18,6 @@ android:
     - extra-google-m2repository
 
       # Specify at least one system image, if you need to run emulator(s) during your tests
-    #- sys-img-armeabi-v7a-android-11
-    #- sys-img-x86-android-
     - sys-img-armeabi-v7a-android-25
     - sys-img-x86-android-25
 
