--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ jdk:
   - oraclejdk8
 
 sudo: false
-cache: false # Remove cache
 
 android:
   components:
@@ -46,7 +45,7 @@ install:
 
 before_script:
     - chmod +x gradlew
-    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a-25
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
