--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ android:
   components:
     - tools
     - platform-tools
+    - tools
     # The BuildTools version used by your project
     - build-tools-25.0.0
     - android-25
@@ -17,7 +18,8 @@ android:
     - extra-google-m2repository
 
       # Specify at least one system image, if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-addon-google_apis-google-25
+    #- sys-img-armeabi-v7a-addon-google_apis-google-25
+    - sys-img-armeabi-v7a-google_apis-25
     - sys-img-x86-android-25
 
   licenses:
@@ -45,7 +47,7 @@ install:
 
 before_script:
     - chmod +x gradlew
-    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a-25
+    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a --tag google_apis
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
