--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ android:
 
       # Specify at least one system image, if you need to run emulator(s) during your tests
     #- sys-img-armeabi-v7a-addon-google_apis-google-25
+    #- sys-img-x86-android-25
     - sys-img-armeabi-v7a-google_apis-25
-    - sys-img-x86-android-25
 
   licenses:
       - android-sdk-preview-license-.+
@@ -47,7 +47,7 @@ install:
 
 before_script:
     - chmod +x gradlew
-    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a --tag google_apis
+    - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
