--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ android:
       # Specify at least one system image, if you need to run emulator(s) during your tests
     #- sys-img-armeabi-v7a-addon-google_apis-google-25
     #- sys-img-x86-android-25
-    - sys-img-armeabi-v7a-google_apis-25
+    - sys-img-armeabi-v7a-25
 
   licenses:
       - android-sdk-preview-license-.+
