--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ android:
     - tools
     # The BuildTools version used by your project
     - build-tools-25.0.1
-    - android-24
+    - android-25
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-android-support
     - extra-google-google_play_services
       # Specify at least one system image, if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-24
+    #- sys-img-armeabi-v7a-android-24
     - sys-img-armeabi-v7a-android-25
 
   licenses:
