--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ before_script:
     - chmod +x gradlew
     - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
+    - android list targets
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
