--- a/.travis.yml
+++ b/.travis.yml
@@ -56,8 +56,9 @@ script:
   # currently only doing a normal build to test Travis config
   #- ./gradlew mobile:functionalTests
   #- ./gradlew wear:functionalTests
-   -  ./gradlew core:test --info
+  #- ./gradlew core:test --info
   #- ./gradlew core:jacocoTestReport
+  - ./gradlew core:build
 
 # Codecov
 after_success:
