--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ android:
     - extra-android-support
     - extra-google-google_play_services
       # Specify at least one system image, if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-25
+    #- sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-addon-google_apis-google-25
 
   licenses:
       - android-sdk-preview-license-.+
@@ -44,11 +45,13 @@ install:
   - true
 
 before_script:
-    - chmod +x gradlew
-    - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+  - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:25" --abi google_apis/armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  #- chmod +x gradlew
+  #- echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
+  #- emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
+  #- android-wait-for-emulator
+  #- adb shell input keyevent 82 &
 
 # Build, and run tests
 script: 
