--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,13 @@ android:
     # The BuildTools version used by your project
     - build-tools-25.1.0
     - android-25
+    # Additional components
     - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-android-support
-    - extra-google-google_play_services
+
+    # Specify system images to run emulators during the tests
+    - sys-img-armeabi-v7a-android-25
+    - sys-img-x86-android-25
+
       # Specify at least one system image, if you need to run emulator(s) during your tests
     #- sys-img-armeabi-v7a-android-25
     - sys-img-armeabi-v7a-addon-google_apis-google-25
@@ -35,23 +38,24 @@ before_cache:
 # cache between builds
 cache:
   directories:
-  - $HOME/.m2
+  #- $HOME/.m2
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
-install:
+before_install:
+  - chmod +x gradlew
+
+#install:
   # Check install section: http://docs.travis-ci.com/user/build-configuration/#install
   # If you'd like to skip the install stage entirely, set it to true and nothing will be run.
-  - true
+ # - true
 
-before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+before_script:  
   #- chmod +x gradlew
-  #- echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
-  #- emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-  #- android-wait-for-emulator
-  #- adb shell input keyevent 82 &
+  - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 # Build, and run tests
 script: 
