--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,14 @@ android:
     - platform-tools
     - tools
     # The BuildTools version used by your project
-    - build-tools-25.1.0
-    - android-25
+    - build-tools-24.0.3
+    - android-24
     # Additional components
     - extra-android-m2repository
 
     # Specify system images to run emulators during the tests
-    - sys-img-armeabi-v7a-android-25
-    - sys-img-x86-android-25
-
-      # Specify at least one system image, if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-25
-    #- sys-img-armeabi-v7a-addon-google_apis-google-25
+    - sys-img-armeabi-v7a-android-24
+    #- sys-img-x86-android-24
 
   licenses:
       - android-sdk-preview-license-.+
@@ -52,7 +48,7 @@ before_install:
 
 before_script:  
   #- chmod +x gradlew
-  - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
+  - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
