change image stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ android:
     - extra-android-m2repository
 
     # Specify system images to run emulators during the tests
-    - sys-img-armeabi-v7a-android-24
-    #- sys-img-x86-android-24
+    #- sys-img-armeabi-v7a-android-24
+    - sys-img-x86-android-24
 
   licenses:
       - android-sdk-preview-license-.+
