--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,17 @@ android:
     - platform-tools
     - tools
     # The BuildTools version used by your project
-    - build-tools-24.0.3
-    - android-24
+    - build-tools-25.1.0
+    - android-25
     # Additional components
+    - extra-android-support
     - extra-android-m2repository
     - extra-google-m2repository
-    - extra-android-support
     - extra-google-google_play_services
 
     # Specify system images to run emulators during the tests
-    #- sys-img-armeabi-v7a-android-24
-    - sys-img-x86-android-24
+    - sys-img-armeabi-v7a-android-25
+    - sys-img-x86-android-25
 
   licenses:
       - android-sdk-preview-license-.+
@@ -31,13 +31,13 @@ android:
 notifications:
   email: false
 
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+#before_cache:
+#  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 
 # cache between builds
 cache:
   directories:
-  #- $HOME/.m2
+  - $HOME/.m2
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
@@ -47,11 +47,11 @@ before_install:
 #install:
   # Check install section: http://docs.travis-ci.com/user/build-configuration/#install
   # If you'd like to skip the install stage entirely, set it to true and nothing will be run.
- # - true
+  - true
 
 before_script:  
   #- chmod +x gradlew
-  - echo no | android create avd --force --name test --target android-24 --abi armeabi-v7a
+  - echo no | android create avd --force --name test --target android-25 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
